TODO
* add borland5 and codegear files

20121224
* added .gitignore
* updated msvscpp files

20120919
* updated dependencies

20120904
* updated dependencies

20120625
* updated dependencies

20120507
* email and project site change
* updated man pages

20120425
* fixes for pkg-config detection of libraries

20120408
* updated dependencies

20120407
* Worked on stand-alone version
