@@ -1,4 +1,4 @@
 Acknowledgements: libcnotify
 
-Copyright (c) 2008-2012, Joachim Metz <joachim.metz@gmail.com>
+Copyright (c) 2008-2013, Joachim Metz <joachim.metz@gmail.com>
 
