@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libcnotify],
- [20121224],
+ [20130103],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
