@@ -1,5 +1,6 @@
-TODO
-* add borland5 and codegear files
+20130103
+* changes to .gitignore
+* 2013 update
 
 20121224
 * added .gitignore
